--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "typescript": "^5.5.4"
   }
 }
